Client: Doctor profile --> meet list

--- a/client/src/tailwindcss.css
+++ b/client/src/tailwindcss.css
@@ -2,3 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* Для скрытия скролл-бара в Chrome, Safari и Edge */
+.overflow-y-auto::-webkit-scrollbar {
+    display: none;
+}
+
+/* Для скрытия скролл-бара в Firefox */
+.overflow-y-auto {
+    scrollbar-width: none; /* Для Firefox */
+}
+
